# pbl

./: .gitignore  LICENSE  Readme  config.nims  pbl.nimble
assets/checkpoints/nn/: cp.ckpt.index
assets/checkpoints/nn2/: cp.ckpt.index
assets/checkpoints/nn3/: cp.ckpt.index
assets/checkpoints/nn4/: cp.ckpt.index
assets/checkpoints/ox_nn/: cp.ckpt.index
assets/checkpoints/ox_nn2/: cp.ckpt.index
assets/checkpoints/ox_nn3/: cp.ckpt.index
assets/checkpoints/ox_nn4/: cp.ckpt.index
assets/datasets/: Readme
assets/plots/: Readme
assets/saved/: Readme
extra/: docker-compose.yaml
framework/: Cargo.toml
framework/examples/: check_format.rs  check_unimplemented.rs  hdf5_to_csv.rs  save_dataset_to_sql.rs
framework/src/: lib.rs
framework/src/consts/: calc.rs  charge.rs  extinction.rs  hydro.rs  mod.rs  weight.rs
framework/src/hdf/: data.rs  impl_consts.rs  mod.rs
projects/batch_effect/: Cargo.toml
projects/batch_effect/src/: main.rs
projects/ml/: dnn_regression.py  heatmap.py  learning.py  linear_regression.py  linear_regression_multiple.py  lstm.py  lstm_ox.py  old_linear_regression_sk.py  plots.py  random_forst.py
projects/pbl_milestone1/: config.nims  pbl_milestone1.nimble
projects/redo_extras/: Cargo.toml
projects/redo_extras/src/: main.rs
projects/sql_converter/: .env  Cargo.toml
projects/sql_to_csv/: Cargo.toml
projects/sql_to_csv/src/: main.rs
scripts/: dirtyheatmap.py
sql/: 1_create_indexing.sql  2_create_score_stats.sql  4_create_averages.sql  testing.sql
src/: pbl.nim
src/pbl/: consts.nim  settings.nim  types.nim
(+8 files in other folders)
