[package]
name = "sql_to_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../../framework", version = "0.1" }
tokio = { version = "1.21.1", features = ["macros"] }
sqlx = {version = "0.6.1", features = ["postgres", "runtime-tokio-rustls", "macros"]}
csv = "1.1.6"
serde = { version = "1.0.146", features = ["derive"] }